# ArPiRobot-CoreLib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  dev-deploy.cmd  dev-deploy.py  dev-deploy.sh  generate_docs.py  generate_docs.sh  generate_update_package.py  generate_update_package.sh  prep_pi_zero.sh  run.py  setup-testrobot.py  start-cpp.sh  start-java.sh  start-py.sh  version.txt
cpp_library/: .clangd  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  arpirobot-aarch64-toolchain-clang.cmake  arpirobot-aarch64-toolchain.cmake  arpirobot-armv6-toolchain-clang.cmake  arpirobot-armv6-toolchain-gcc.cmake  arpirobot-armv6-toolchain.cmake  arpirobot-cross.cmake  native-toolchain.cmake
cpp_library/cmake/: Findlgpio.cmake  Findpigpio.cmake
cpp_library/cmake_toolchains/: pi_zero.cmake
cpp_library/include/arpirobot/: bridge.hpp
cpp_library/include/arpirobot/arduino/: device.hpp  iface.hpp  sensor.hpp
cpp_library/include/arpirobot/arduino/device/: ArduinoDevice.hpp
cpp_library/include/arpirobot/arduino/iface/: ArduinoUartInterface.hpp  BaseArduinoInterface.hpp
cpp_library/include/arpirobot/arduino/sensor/: IRReflectorModule.hpp  Mpu6050Imu.hpp  NxpAdafruit9Dof.hpp  OldAdafruit9Dof.hpp  QuadEncoder.hpp  SingleEncoder.hpp  Ultrasonic4Pin.hpp  VoltageMonitor.hpp
cpp_library/include/arpirobot/core/: action.hpp  conversions.hpp  device.hpp  drive.hpp  global.hpp  log.hpp  network.hpp  robot.hpp  scheduler.hpp
cpp_library/include/arpirobot/core/action/: Action.hpp  ActionManager.hpp  ActionSeries.hpp  BaseActionTrigger.hpp
cpp_library/include/arpirobot/core/audio/: AudioDeviceInfo.hpp  AudioManager.hpp
cpp_library/include/arpirobot/core/camera/: BaseCamera.hpp  BaseCameraDevice.hpp  Camera.hpp  CameraAPI.hpp  CameraDevice.hpp  CameraManager.hpp  CameraStreamSettings.hpp  CameraVideoMode.hpp  H264Settings.hpp  InputFormat.hpp  JpegSettings.hpp  LibcameraCamera.hpp  LibcameraCameraDevice.hpp  RpicamCamera.hpp  V4L2CameraDevice.hpp  V4l2Camera.hpp
cpp_library/include/arpirobot/core/control/: PID.hpp  PIDSystem.hpp
cpp_library/include/arpirobot/core/device/: BaseDevice.hpp  MotorController.hpp
cpp_library/include/arpirobot/core/drive/: ArcadeDriveHelper.hpp  BaseAxisTransform.hpp  CubicAxisTransform.hpp  SquareRootAxisTransform.hpp  TankDriveHelper.hpp
cpp_library/include/arpirobot/core/io/: DummyIoProvider.hpp  Io.hpp  IoDevice.hpp  IoException.hpp  IoProvider.hpp  LgpioIoProvider.hpp  LibsocIoProvider.hpp  PigpioIoProvider.hpp  SerialIoProvider.hpp  exceptions.hpp
cpp_library/include/arpirobot/core/log/: Logger.hpp
cpp_library/include/arpirobot/core/network/: ControllerData.hpp  MainVmon.hpp  NetworkManager.hpp  NetworkTable.hpp
cpp_library/include/arpirobot/core/robot/: BaseRobot.hpp  RobotProfile.hpp
cpp_library/include/arpirobot/devices/: adafruitmotorhat.hpp  drv8833.hpp  gamepad.hpp  ina260.hpp  l298n.hpp  tb6612.hpp
cpp_library/include/arpirobot/devices/adafruitmotorhat/: AdafruitMotorHatMotor.hpp
cpp_library/include/arpirobot/devices/drv8833/: DRV8833Module.hpp  DRV8833Motor.hpp
cpp_library/include/arpirobot/devices/gamepad/: ButtonPressedTrigger.hpp  ButtonReleasedTrigger.hpp  Gamepad.hpp
cpp_library/include/arpirobot/devices/gpio/: GPIOPin.hpp  StatusLED.hpp
cpp_library/include/arpirobot/devices/ina260/: INA260PowerSensor.hpp
cpp_library/include/arpirobot/devices/l298n/: L298NModule.hpp  L298NMotor.hpp
cpp_library/include/arpirobot/devices/led/: StatusLED.hpp
cpp_library/include/arpirobot/devices/tb6612/: TB6612Module.hpp  TB6612Motor.hpp
cpp_library/src/arpirobot/: bridge.cpp
cpp_library/src/arpirobot/arduino/: device.cpp  iface.cpp  sensor.cpp
cpp_library/src/arpirobot/arduino/device/: ArduinoDevice.cpp
cpp_library/src/arpirobot/arduino/iface/: ArduinoUartInterface.cpp  BaseArduinoInterface.cpp
cpp_library/src/arpirobot/arduino/sensor/: IRReflectorModule.cpp  Mpu6050Imu.cpp  NxpAdafruit9Dof.cpp  OldAdafruit9Dof.cpp  QuadEncoder.cpp  SingleEncoder.cpp  Ultrasonic4Pin.cpp  VoltageMonitor.cpp
cpp_library/src/arpirobot/core/: action.cpp  conversions.cpp  device.cpp  drive.cpp  global.cpp  log.cpp  network.cpp  robot.cpp  scheduler.cpp
cpp_library/src/arpirobot/core/action/: Action.cpp  ActionManager.cpp  ActionSeries.cpp  BaseActionTrigger.cpp
cpp_library/src/arpirobot/core/audio/: AudioManager.cpp
cpp_library/src/arpirobot/core/camera/: BaseCamera.cpp  CameraDevice.cpp  CameraManager.cpp  CameraManagerOLD.cpp  H264Settings.cpp  JpegSettings.cpp  LibcameraCamera.cpp  LibcameraCameraDevice.cpp  RpicamCamera.cpp  V4L2CameraDevice.cpp  V4l2Camera.cpp
cpp_library/src/arpirobot/core/control/: PID.cpp  PIDSystem.cpp
cpp_library/src/arpirobot/core/device/: BaseDevice.cpp  MotorController.cpp
cpp_library/src/arpirobot/core/drive/: ArcadeDriveHelper.cpp  CubicAxisTransform.cpp  SquareRootAxisTransform.cpp  TankDriveHelper.cpp
cpp_library/src/arpirobot/core/io/: DummyIoProvider.cpp  Io.cpp  IoDevice.cpp  IoException.cpp  IoProvider.cpp  LgpioIoProvider.cpp  LibsocIoProvider.cpp  PigpioIoProvider.cpp  SerialIoProvider.cpp  exceptions.cpp
cpp_library/src/arpirobot/core/log/: Logger.cpp
cpp_library/src/arpirobot/core/network/: ControllerData.cpp  MainVmon.cpp  NetworkManager.cpp  NetworkTable.cpp
cpp_library/src/arpirobot/core/robot/: BaseRobot.cpp  RobotProfile.cpp
cpp_library/src/arpirobot/devices/: adafruitmotorhat.cpp  drv8833.cpp  gamepad.cpp  ina260.cpp  l298n.cpp  tb6612.cpp
cpp_library/src/arpirobot/devices/adafruitmotorhat/: AdafruitMotorHatMotor.cpp
cpp_library/src/arpirobot/devices/drv8833/: DRV8833Module.cpp  DRV8833Motor.cpp
cpp_library/src/arpirobot/devices/gamepad/: ButtonPressedTrigger.cpp  ButtonReleasedTrigger.cpp  Gamepad.cpp
cpp_library/src/arpirobot/devices/gpio/: GPIOPin.cpp  StatusLED.cpp
cpp_library/src/arpirobot/devices/ina260/: INA260PowerSensor.cpp
cpp_library/src/arpirobot/devices/l298n/: L298NModule.cpp  L298NMotor.cpp
cpp_library/testrobot/: main.cpp
cpp_library/testrobot/include/: actions.hpp  robot.hpp
cpp_library/testrobot/src/: actions.cpp  robot.cpp
(+116 files in other folders)
